--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 flask==3.1.2
 gunicorn==23.0.0
 opencv-python-headless==4.10.0.84
-torch==2.3.1+cpu --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.18.1+cpu --index-url https://download.pytorch.org/whl/cpu
+torch==2.3.1
+torchvision==0.18.1
 ultralytics==8.2.103
 pillow==10.4.0
 numpy==1.26.4
