--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-flask==3.1.2
-gunicorn==23.0.0
-opencv-python-headless==4.10.0.84
-torch==2.3.1
-torchvision==0.18.1
-ultralytics==8.2.103
-pillow==10.4.0
-numpy==1.26.4
-pyyaml==6.0.2
-requests==2.32.3
+flask
+gunicorn
+opencv-python-headless
+torch
+torchvision
+ultralytics
+pillow
+numpy
