--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-flask
-gunicorn
-opencv-python-headless
-torch
-torchvision
-ultralytics
-pillow
-numpy
+flask==3.1.2
+gunicorn==23.0.0
+opencv-python-headless==4.10.0.84
+torch==2.3.1 --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.18.1 --index-url https://download.pytorch.org/whl/cpu
+ultralytics==8.2.103
+pillow==10.4.0
+numpy==1.26.4
+pyyaml==6.0.2
